fix(checkbox-radio-buttons): fix slots display to align smaller texts vertically

--- a/packages/components/src/checkbox-button/src/components/osds-checkbox-button/osds-checkbox-button.scss
+++ b/packages/components/src/checkbox-button/src/components/osds-checkbox-button/osds-checkbox-button.scss
@@ -14,6 +14,10 @@
   cursor: pointer;
   width: fit-content;
 
+  > ::slotted(span) {
+    display: grid;
+  }
+
   .checkbox-button {
     border-style: solid;
     border-radius: var(--ods-size-border-radius-01);
@@ -39,11 +43,6 @@
     opacity: 0.5;
     cursor: not-allowed;
   }
-}
-
-
-slot {
-  display: block;
 }
 
 // apply the theme template for the component
